# english-mo-card

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
static/: app.js  style.css
templates/: index.html
