[project]
name = "en-flash-card"
version = "0.1.0"
description = "English flash cards for a 4.2-inch tri-colour EPD"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "openai>=1.0.0",
    "pillow>=11.0.0",
    "uvicorn[standard]>=0.32.0",
]
